1.3.0 (2017/04/11)
==================

- Expose real `infusionsoft` module, for easy mocking during testing.



1.2.0 (2017/04/11)
==================

 - Include Django integration
 - Switch to Werkzeug LocalProxy class (far simpler to understand)



1.1.0 (2017/04/11)
==================

 - Added `consume()` function to retrieve all rows of a paginated query.