@@ -1,7 +1,14 @@
+UNRELEASED (TBA)
+================
+
+ - Python 3.5 support (str.format used, instead of f-strings)
+
+
+
 1.3.0 (2017/04/11)
 ==================
 
-- Expose real `infusionsoft` module, for easy mocking during testing.
+ - Expose real `infusionsoft` module, for easy mocking during testing.
 
 
 
